--- a/MVConsultoria.web/wwwroot/clientes.css
+++ b/MVConsultoria.web/wwwroot/clientes.css
@@ -54,6 +54,11 @@ body {
     display: block;
 }
 
+.selected-row {
+    background-color: #12229a !important; /* Destaca a linha selecionada */
+    color: #ffffff;
+}
+
 main {
     padding: 20px;
 }
@@ -76,4 +81,55 @@ footer {
     position: fixed;
     width: 100%;
     bottom: 0;
+}
+
+/* Modal */
+.modal {
+    display: none; /* Oculto inicialmente */
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.4); /* Fundo semitransparente */
+    padding-top: 60px;
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: 5% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 50%; /* Ajuste para que fique menor */
+    border-radius: 10px;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    cursor: pointer;
+}
+
+
+
+.close-create {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close-create:hover,
+.close-create:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
 }
