--- a/MVConsultoria.web/wwwroot/clientes.css
+++ b/MVConsultoria.web/wwwroot/clientes.css
@@ -1,7 +1,14 @@
+/* Importando a fonte Ubuntu */
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+
+/* Estilo da página Admin */
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Ubuntu', sans-serif; /* Alterado para usar Ubuntu */
     margin: 0;
     padding: 0;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
 }
 
 .header-container {
@@ -71,13 +78,13 @@ table {
 th, td {
     padding: 12px;
     text-align: left;
-    border-bottom: 1px solid #ddd;
+    border-bottom: 1px solid #2B2B2B;
 }
 
 footer {
     text-align: center;
     padding: 10px;
-    background-color: #f8f8f8;
+    background-color: #2B2B2B;
     position: fixed;
     width: 100%;
     bottom: 0;
@@ -97,7 +104,7 @@ footer {
 }
 
 .modal-content {
-    background-color: #fefefe;
+    background-color: #2B2B2B;
     margin: 5% auto;
     padding: 20px;
     border: 1px solid #888;
