--- a/MVConsultoria.web/wwwroot/clientes.css
+++ b/MVConsultoria.web/wwwroot/clientes.css
@@ -1,14 +1,11 @@
-/* Importando a fonte Ubuntu */
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
-
-/* Estilo da página Admin */
 body {
-    font-family: 'Ubuntu', sans-serif; /* Alterado para usar Ubuntu */
+    font-family: 'Ubuntu', sans-serif;
     margin: 0;
     padding: 0;
     display: flex;
     flex-direction: column;
     height: 100vh;
+    overflow: hidden;  /* Esconde o scroll no body e move para o main */
 }
 
 .header-container {
@@ -22,8 +19,8 @@ body {
 #searchField {
     padding: 10px;
     font-size: 16px;
-    max-width: 600px; /* Limita o tamanho do campo de busca */
-    margin-right: 20px; /* Espaço entre o campo de busca e o menu hambúrguer */
+    max-width: 600px;
+    margin-right: 20px;
     flex-grow: 1;
 }
 
@@ -62,12 +59,15 @@ body {
 }
 
 .selected-row {
-    background-color: #12229a !important; /* Destaca a linha selecionada */
+    background-color: #12229a !important;
     color: #ffffff;
 }
 
 main {
     padding: 20px;
+    flex-grow: 1;
+    overflow-y: auto; /* Adiciona scroll no conteúdo principal */
+    max-height: calc(100vh - 80px); /* Altura máxima com rodapé fixo */
 }
 
 table {
@@ -81,6 +81,18 @@ th, td {
     border-bottom: 1px solid #2B2B2B;
 }
 
+#clientes-table tbody {
+    display: block;
+    max-height: 400px; /* Limita a altura da tabela */
+    overflow-y: auto;
+}
+
+#clientes-table thead, #clientes-table tbody tr {
+    display: table;
+    width: 100%;
+    table-layout: fixed;
+}
+
 footer {
     text-align: center;
     padding: 10px;
@@ -90,16 +102,15 @@ footer {
     bottom: 0;
 }
 
-/* Modal */
 .modal {
-    display: none; /* Oculto inicialmente */
+    display: none;
     position: fixed;
     z-index: 1;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0,0,0,0.4); /* Fundo semitransparente */
+    background-color: rgba(0,0,0,0.4);
     padding-top: 60px;
 }
 
@@ -108,35 +119,18 @@ footer {
     margin: 5% auto;
     padding: 20px;
     border: 1px solid #888;
-    width: 50%; /* Ajuste para que fique menor */
+    width: 50%;
     border-radius: 10px;
 }
 
-.close {
+.close, .close-create {
     color: #aaa;
     float: right;
     font-size: 28px;
     font-weight: bold;
 }
 
-.close:hover,
-.close:focus {
+.close:hover, .close:focus, .close-create:hover, .close-create:focus {
     color: black;
-    cursor: pointer;
-}
-
-
-
-.close-create {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-}
-
-.close-create:hover,
-.close-create:focus {
-    color: black;
-    text-decoration: none;
     cursor: pointer;
 }
