--- a/MVConsultoria.web/wwwroot/admin.css
+++ b/MVConsultoria.web/wwwroot/admin.css
@@ -1,9 +1,7 @@
-/* Importando a fonte Ubuntu */
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 
-/* Estilo da página Admin */
 body {
-    font-family: 'Ubuntu', sans-serif; /* Alterado para usar Ubuntu */
+    font-family: 'Ubuntu', sans-serif;
     margin: 0;
     padding: 0;
     display: flex;
@@ -11,13 +9,11 @@ body {
     height: 100vh;
 }
 
-/* Container que envolve sidebar e conteúdo */
 .container {
     display: flex;
     flex-grow: 1;
 }
 
-/* Estilo da barra lateral */
 .sidebar {
     width: 250px;
     background-color: #2B2B2B;
@@ -31,7 +27,7 @@ body {
 .sidebar h2 {
     text-align: center;
     margin-bottom: 30px;
-    font-weight: bold; /* Deixa o título em negrito */
+    font-weight: bold; 
 }
 
 .sidebar ul {
@@ -42,21 +38,20 @@ body {
 .sidebar ul li {
     padding: 10px;
     border-bottom: 1px solid #2B2B2B;
-    font-weight: bold; /* Deixa os itens da lista em negrito */
+    font-weight: bold; 
 }
 
 .sidebar ul li a {
     color: white;
     text-decoration: none;
     display: block;
-    font-weight: bold; /* Deixa os links em negrito */
+    font-weight: bold; 
 }
 
 .sidebar ul li:hover {
     background-color: #2B2B2B;
 }
 
-/* Estilo do conteúdo principal */
 .content {
     flex-grow: 1;
     background-color: #ecf0f1;
@@ -84,10 +79,9 @@ footer {
     color: white;
 }
 
-/* Estilo para a imagem na barra lateral */
 .sidebar-image {
     margin-top: 150px;
-    width: 100%; /* Ajuste a largura conforme necessário */
-    height: auto; /* Mantém a proporção da imagem */
-    border-radius: 5px; /* Deixa as bordas arredondadas, se desejado */
+    width: 100%; 
+    height: auto;
+    border-radius: 5px;
 }
