--- a/MVConsultoria.web/wwwroot/clientes.css
+++ b/MVConsultoria.web/wwwroot/clientes.css
@@ -1,3 +1,6 @@
+/* Importando a fonte Ubuntu */
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+
 body {
     font-family: 'Ubuntu', sans-serif;
     margin: 0;
@@ -94,9 +97,9 @@ th, td {
 }
 
 footer {
+    background-color: #2B2B2B;
     text-align: center;
     padding: 10px;
-    background-color: #2B2B2B;
     position: fixed;
     width: 100%;
     bottom: 0;
