--- a/MVConsultoria.web/wwwroot/login.css
+++ b/MVConsultoria.web/wwwroot/login.css
@@ -1,12 +1,13 @@
-/* Reset básico */
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Ubuntu', sans-serif;
     background-color: #f4f4f4;
     color: #333;
     min-height: 100vh;
@@ -25,7 +26,7 @@ body {
 }
 
 header {
-    background-color: #567EF5;
+    background-color: #2B2B2B;
     padding: 15px;
     color: white;
     text-align: center;
@@ -50,7 +51,7 @@ header {
 }
 
 .login-container header {
-    background-color: #567EF5;
+    background-color: #2B2B2B;
 }
 
 .login-area {
@@ -69,7 +70,7 @@ header {
 .login-area button {
     padding: 10px;
     border: none;
-    background-color: #452EF7;
+    background-color: #2B2B2B;
     color: white;
     border-radius: 5px;
     cursor: pointer;
@@ -77,7 +78,7 @@ header {
 }
 
 .login-area button:hover {
-    background-color: #3418d4;
+    background-color: #2B2B2B;
 }
 
 .section {
@@ -161,4 +162,5 @@ canvas {
     .toggle-section {
         font-size: 18px;
     }
+
 }
