--- a/MVConsultoria.web/wwwroot/parcelas.css
+++ b/MVConsultoria.web/wwwroot/parcelas.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Ubuntu', sans-serif;
     margin: 0;
     padding: 0;
 }
@@ -16,7 +18,7 @@ body {
 #searchDataField {
     padding: 10px;
     font-size: 16px;
-    margin-right: 20px; /* Espaço entre os campos de busca */
+    margin-right: 20px; 
     flex-grow: 1;
 }
 
@@ -145,7 +147,7 @@ footer {
 button {
     padding: 10px 20px;
     font-size: 14px;
-    background-color: #4caf50;
+    background-color: #567EF5;
     color: white;
     border: none;
     cursor: pointer;
@@ -153,7 +155,7 @@ button {
 }
 
 button:hover {
-    background-color: #45a049;
+    background-color: #567EF5;
 }
 
 button.cancel {
