--- a/MVConsultoria.web/wwwroot/spa.css
+++ b/MVConsultoria.web/wwwroot/spa.css
@@ -5,8 +5,11 @@
     padding: 0;
 }
 
+/* Importando a fonte Ubuntu */
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Ubuntu', sans-serif;
     background-color: #f4f4f4;
     color: #333;
     min-height: 100vh;
@@ -25,7 +28,7 @@ body {
 }
 
 header {
-    background-color: #567EF5;
+    background-color: #2B2B2B;
     padding: 15px;
     color: white;
     text-align: center;
@@ -50,7 +53,7 @@ header {
 }
 
 .login-container header {
-    background-color: #567EF5;
+    background-color: #2B2B2B;
 }
 
 .login-area {
@@ -69,7 +72,7 @@ header {
 .login-area button {
     padding: 10px;
     border: none;
-    background-color: #452EF7;
+    background-color: #567EF5;
     color: white;
     border-radius: 5px;
     cursor: pointer;
@@ -77,7 +80,7 @@ header {
 }
 
 .login-area button:hover {
-    background-color: #3418d4;
+    background-color: #567EF5;
 }
 
 .section {
